[tool.poetry]
name = "10-2-tests"
version = "0.1.0"
description = ""
authors = ["Petr Maev <petr.maev94@gmail.com>"]
readme = "README.md"
packages = [{include = "10"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
